# AI-Code-Reviewer

./: LICENSE  app-flow.md  implementation_guide.md  readme.md
ai-service/: main.py  pyproject.toml  requirements.txt
backend/: .env.example  README.md  docker-compose.yml  eslint.config.mjs  generate-secrets.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
backend/drizzle/: 0000_quick_harpoon.sql
backend/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/src/: app.module.ts  app.service.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/auth/dto/: change-password.dto.ts  register.dto.ts  reset-password.dto.ts
backend/src/auth/strategies/: jwt.strategy.ts  refresh-jwt.strategy.ts
backend/src/database/: database.service.ts  schema.ts
backend/src/email/: email.service.ts
backend/src/email/templates/: login-notification.template.ts  password-changed.template.ts  reset-password.template.ts  verify-email.template.ts
backend/src/sessions/: sessions.module.ts  sessions.service.ts
backend/test/: HOW_TO_RUN_TESTS.md  README.md  auth.e2e-spec.ts
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx
frontend/app/auth/forgot-password/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/auth/reset-password/: page.tsx
frontend/app/auth/verify-email/: page.tsx
frontend/context/: AuthContext.tsx
frontend/lib/: api.ts
